examples/bad/DivZero2.tn
{
  int x = 3;
  int y = 7;
  :
  y %= 7;
  print x % y;
}

